differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr66618.c-4.8.2-0.out.txt
pr66618.c: In function ‘foo’:
pr66618.c:9:3: error: initializer element is not constant
   static int b = a;  
   ^
